--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>MuseScore Web</title>
 </head>
 <body>
-    <h1>Welcome to MuseScore Web</h1>
-    <p>This is the standard index.html page.</p>
-    <a href="./Anglaise_Dm_Manuscrit_Jamin_pg_60_Wallonie_1820.pdf">Anglaise Dm manuscript Jamin page 60</a>
+    <h1>Diato les grands!</h1>
+    <a href="./Anglaise_Dm_Manuscrit_Jamin_pg_60_Wallonie_1820.pdf">Anglaise Dm manuscript Jamin page 60 - ANGLAISE</a>
+    <a href="./12A La maison de glace - 2 voix - partition.pdf">La maison de glace 2 voix - GIG</a>
 </body>
 </html>
