--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Diato les grands!</h1>
-    <a href="./Anglaise_Dm_Manuscrit_Jamin_pg_60_Wallonie_1820.pdf">Anglaise Dm manuscript Jamin page 60 - ANGLAISE</a>
-    <a href="./12A La maison de glace - 2 voix - partition.pdf">La maison de glace 2 voix - GIG</a>
+    <div><a href="./Anglaise_Dm_Manuscrit_Jamin_pg_60_Wallonie_1820.pdf">Anglaise Dm manuscript Jamin page 60 - ANGLAISE</a></div>
+    <div><a href="./12A La maison de glace - 2 voix - partition.pdf">La maison de glace 2 voix - GIG</a></div>
 </body>
 </html>
