--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
 </head>
 <body>
     <h1>Diato les grands!</h1>
-    <div><a href="./Anglaise_Dm_Manuscrit_Jamin_pg_60_Wallonie_1820.pdf">Anglaise Dm manuscript Jamin page 60 - ANGLAISE</a></div>
-    <div><a href="./12A La maison de glace - 2 voix - partition.pdf">La maison de glace 2 voix - GIG</a></div>
+    <div><a href="./Anglaise_Dm_Manuscrit_Jamin_pg_60_Wallonie_1820.pdf">Anglaise Dm - 2 voix - ANGLAISE</a></div>
+    <div><a href="./12A La maison de glace - 2 voix - partition.pdf">La maison de glace - 2 voix - GIG</a></div>
+    <div><a href="./a09 il est ne le divin.pdf">Il est né le divin enfant - NOEL</a></div>
+    <div><a href="./doucenuitsaintenuit4voix.pdf">Douce nuit - NOEL</a></div>
+    <div><a href="./Vive-le-vent-partition-paroles.pdf">Vive le vent - NOEL</a></div>
+    <div><a href="./Oh Tannenbaum.pdf">Oh Tannenbaum - NOEL</a></div>
+
 </body>
 </html>
