--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 </head>
 <body>
     <h1>Diato les grands!</h1>
+    <div><a href="./08 Scottish_du Camion_Scotch Brein V3.pdf">Scottish du Camion & Scotch Brein - SCOTTISH</a></div>
     <div><a href="./Anglaise_Dm_Manuscrit_Jamin_pg_60_Wallonie_1820.pdf">Anglaise Dm - 2 voix - ANGLAISE</a></div>
+    <div><a href="./Madison_suédois.pdf">Madison suédois - MADISON</a></div>
     <div><a href="./12A La maison de glace - 2 voix - partition.pdf">La maison de glace - 2 voix - GIG</a></div>
     <div><a href="./a09 il est ne le divin.pdf">Il est né le divin enfant - NOEL</a></div>
     <div><a href="./doucenuitsaintenuit4voix.pdf">Douce nuit - NOEL</a></div>
