--- a/index.html
+++ b/index.html
@@ -1,20 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MuseScore Web</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Diato les grands!</h1>
-    <div><a href="./08 Scottish_du Camion_Scotch Brein V3.pdf">Scottish du Camion & Scotch Brein - SCOTTISH</a></div>
-    <div><a href="./Anglaise_Dm_Manuscrit_Jamin_pg_60_Wallonie_1820.pdf">Anglaise Dm - 2 voix - ANGLAISE</a></div>
-    <div><a href="./Madison_suédois.pdf">Madison suédois - MADISON</a></div>
-    <div><a href="./12A La maison de glace - 2 voix - partition.pdf">La maison de glace - 2 voix - GIG</a></div>
-    <div><a href="./a09 il est ne le divin.pdf">Il est né le divin enfant - NOEL</a></div>
-    <div><a href="./doucenuitsaintenuit4voix.pdf">Douce nuit - NOEL</a></div>
-    <div><a href="./Vive-le-vent-partition-paroles.pdf">Vive le vent - NOEL</a></div>
-    <div><a href="./Oh Tannenbaum.pdf">Oh Tannenbaum - NOEL</a></div>
+    <h2>Le concert de Noël</h2>
+    <ol>
+      <li>La maison de glace</li>
+      <li>La tendresse</li>
+      <li>Scottish suédoise</li>
+      <li>Il est né le divin enfant</li>
 
-</body>
+      <li>Scotch Brein</li>
+      <li>Les amants de St-Jean</li>
+      <li>Bandura</li>
+      <li>Oh Tannenbaum</li>
+
+      <li>Giga</li>
+      <li>Valse à Joseph</li>
+      <li>Mazura Augurka</li>
+      <li>Douce nuit</li>
+
+      <li>Zelda</li>
+      <li>Les filles du bord de mer</li>
+      <li>Madison suédois</li>
+      <li>Vive le vent</li>
+    </ol>
+    <h2>En attente de confirmation que des jeunes assurent:</h2>
+    <ul>
+      <li>Scottish suédoise</li>
+      <li>Bandura</li>
+      <li>Mazura Augurka</li>
+    </ul>
+    <h2>En attente de confirmation que des grands assurent:</h2>
+    <ul>
+      <li>Valse Joseph</li>
+      <li>Les filles du bord de mer</li>
+    </ul>
+    <h2>
+      Prêts pour remplacer les morceaux précédents que personne n'assurerait:
+    </h2>
+    <ul>
+      <li>Après la pluie</li>
+      <li>Inisheer</li>
+      <li>In Romein</li>
+      <li>Polka Piémontaise</li>
+      <li>Valse Suédoise</li>
+    </ul>
+    <h2>Partitions</h2>
+    <div>
+      <a href="./08 Scottish_du Camion_Scotch Brein V3.pdf"
+        >Scottish du Camion & Scotch Brein - SCOTTISH</a
+      >
+    </div>
+    <div>
+      <a href="./Anglaise_Dm_Manuscrit_Jamin_pg_60_Wallonie_1820.pdf"
+        >Anglaise Dm - 2 voix - ANGLAISE</a
+      >
+    </div>
+    <div><a href="./Madison_suédois.pdf">Madison suédois - MADISON</a></div>
+    <div>
+      <a href="./12A La maison de glace - 2 voix - partition.pdf"
+        >La maison de glace - 2 voix - GIG</a
+      >
+    </div>
+    <div>
+      <a href="./a09 il est ne le divin.pdf"
+        >Il est né le divin enfant - NOEL</a
+      >
+    </div>
+    <div><a href="./doucenuitsaintenuit4voix.pdf">Douce nuit - NOEL</a></div>
+    <div>
+      <a href="./Vive-le-vent-partition-paroles.pdf">Vive le vent - NOEL</a>
+    </div>
+    <div><a href="./Oh Tannenbaum.pdf">Oh Tannenbaum - NOEL</a></div>
+  </body>
 </html>
