--- a/index.html
+++ b/index.html
@@ -9,40 +9,47 @@
     <h1>Diato les grands!</h1>
     <h2>Le concert de Noël</h2>
     <ol>
-      <li>La maison de glace</li>
-      <li>La tendresse</li>
-      <li>Scottish suédoise</li>
-      <li>Il est né le divin enfant</li>
+      <li>
+        <a href="./La_maison_de_glace.pdf">La maison de glace</a>
+      </li>
+      <li><a href="./La_Tendresse.pdf">La tendresse</a></li>
+      <li><a href="./Scottish_suédoise.jpg">Scottish suédoise</a></li>
+      <li><a href="./Le_divin_enfant.pdf">Il est né le divin enfant</a></li>
 
-      <li>Scotch Brein</li>
-      <li>Les amants de St-Jean</li>
-      <li>Bandura</li>
-      <li>Oh Tannenbaum</li>
+      <li>
+        <a href="./Scottish_du_Camion_Scotch_Brein.pdf"
+          >Scottish du Camion / Scotch Brein</a
+        >
+      </li>
+      <li><a href="./Mon_amant_de_Saint_Jean.pdf">Mon amant de St-Jean</a></li>
+      <li><a href="./Bandura.jpg">Bandura</a></li>
+      <li><a href="./Oh_Tannenbaum.pdf">Oh Tannenbaum</a></li>
 
-      <li>Giga</li>
-      <li>Valse à Joseph</li>
-      <li>Mazura Augurka</li>
-      <li>Douce nuit</li>
+      <li><a href="./Giga.pdf">Giga du Piémont</a></li>
+      <li><a href="./Valse_à_Joseph.jpg">Valse à Joseph</a></li>
+      <li><a href="./Mazurka Augurka.jpg">Mazura Augurka</a></li>
+      <li><a href="./doucenuitsaintenuit4voix.pdf">Douce nuit</a></li>
 
-      <li>Zelda</li>
-      <li>Les filles du bord de mer</li>
-      <li>Madison suédois</li>
-      <li>Vive le vent</li>
+      <li><a href="./Zelda.pdf">Zelda</a></li>
+      <li>
+        <a href="./Les_filles_du_bord_de_mer.jpg">Les filles du bord de mer</a>
+      </li>
+      <li><a href="./Madison_suédois.pdf">Madison suédois</a></li>
+      <li><a href="./Vive-le-vent-partition-paroles.pdf">Vive le vent</a></li>
     </ol>
-    <h2>En attente de confirmation que des jeunes assurent:</h2>
+    <h4>En attente de confirmation que des jeunes assurent:</h4>
     <ul>
       <li>Scottish suédoise</li>
       <li>Bandura</li>
       <li>Mazura Augurka</li>
     </ul>
-    <h2>En attente de confirmation que des grands assurent:</h2>
+    <h4>En attente de confirmation que des grands assurent:</h4>
     <ul>
-      <li>Valse Joseph</li>
       <li>Les filles du bord de mer</li>
     </ul>
-    <h2>
+    <h4>
       Prêts pour remplacer les morceaux précédents que personne n'assurerait:
-    </h2>
+    </h4>
     <ul>
       <li>Après la pluie</li>
       <li>Inisheer</li>
@@ -50,32 +57,11 @@
       <li>Polka Piémontaise</li>
       <li>Valse Suédoise</li>
     </ul>
-    <h2>Partitions</h2>
-    <div>
-      <a href="./08 Scottish_du Camion_Scotch Brein V3.pdf"
-        >Scottish du Camion & Scotch Brein - SCOTTISH</a
-      >
-    </div>
+    <h2>Partitions défi</h2>
     <div>
       <a href="./Anglaise_Dm_Manuscrit_Jamin_pg_60_Wallonie_1820.pdf"
         >Anglaise Dm - 2 voix - ANGLAISE</a
       >
     </div>
-    <div><a href="./Madison_suédois.pdf">Madison suédois - MADISON</a></div>
-    <div>
-      <a href="./12A La maison de glace - 2 voix - partition.pdf"
-        >La maison de glace - 2 voix - GIG</a
-      >
-    </div>
-    <div>
-      <a href="./a09 il est ne le divin.pdf"
-        >Il est né le divin enfant - NOEL</a
-      >
-    </div>
-    <div><a href="./doucenuitsaintenuit4voix.pdf">Douce nuit - NOEL</a></div>
-    <div>
-      <a href="./Vive-le-vent-partition-paroles.pdf">Vive le vent - NOEL</a>
-    </div>
-    <div><a href="./Oh Tannenbaum.pdf">Oh Tannenbaum - NOEL</a></div>
   </body>
 </html>
